--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,13 @@
 doctype html
 html
   head
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/fontawesome-all.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous")
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.3/js/tether.min.js')
+    script(src='/javascripts/bootstrap.min.js')
