--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,6 @@ legend {
  
 body {
   font-family: "Cabin", Arial, sans-serif;
-  color: #ffffff;
-  background-color: #108a93;
+  color: #707070;
+  background-color: #F3F3F3;
 }
