--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,19 +1,31 @@
 @import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
  
+body {
+  font-family: "Cabin", Arial, sans-serif;
+  color: #707070;
+  background-color: #F3F3F3;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lobster', cursive;
+  color: #668E59;
 }
- 
+
+.navbar {
+  background-color: #A2B484;
+  border-color: #A2B484;
+}
+
 .navbar-brand {
   font-family: 'Lobster', cursive;
+  color: #F3F3F3;
+}
+
+.navbar-brand:hover {
+  color: #668E59;
 }
  
 legend {
   font-family: 'Lobster', cursive;
 }
  
-body {
-  font-family: "Cabin", Arial, sans-serif;
-  color: #707070;
-  background-color: #F3F3F3;
-}
