Add location-list page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/fontawesome-all.min.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav.navbar.fixed-top.navbar-toggleable-md.navbar-inverse
@@ -13,10 +13,10 @@ html
           span.navbar-toggler-icon
         a.navbar-brand(href='/') Where to Play
         #navbarMain.navbar-collapse.collapse
-          ul.navbar-nav.mr-auto
+          ul.navbar-nav
             li.nav-item
               a.nav-link(href='/locations/') Places
-          ul.navbar-nav.mr-auto
+          ul.navbar-nav
             li.nav-item
               a.nav-link(href='/about/') About
     .container
