--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,59 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-brand:hover {
   color: #668E59;
 }
- 
+
+.banner {
+  margin-top: 4em;
+  border-bottom: 1px solid #FBFBFB;
+  margin-bottom: 1.5em;
+  padding-bottom: 0.5em;
+}
+
+h1 small {
+  color: #aaa;
+}
+
+.card {
+  background-color: #FBFBFB;
+}
+
+.card-primary {
+  border-color: #FBFBFB;
+  margin-bottom: 1rem;
+}
+
+.badge-default, .btn-primary {
+  background-color: #D1613F;
+  border-color: #D1613F;
+}
+
+.btn-primary:hover {
+  background-color: #B85335;
+  border-color: #B85335;
+}
+
+.badge-warning {
+  background-color: #3E8E94;
+}
+
+h4 a, h4 a:hover {
+  color: #668E59;
+}
+
+h4 small {
+  font-size: 60%;
+  line-height: 200%;
+  color: #aaa;
+}
+
+.address {
+  margin-bottom: 0.5rem;
+}
+
+.facilities span.badge {
+  margin-right:2px;
+}
+
 legend {
   font-family: 'Lobster', cursive;
 }
