Fix badges in locations-list page

--- a/views/locations-list.pug
+++ b/views/locations-list.pug
@@ -17,7 +17,7 @@ block content
               i.fa.fa-star
               i.fa.fa-star-o
               i.fa.fa-star-o
-            span.badge.badge-pill-badge-default.float-right 300m
+            span.badge.badge-pill-badge-default.badge-warning.float-right 300m
           p.address C/ Falsa, 123, Cullera
           .facilities
             span.badge.badge-warning Food
@@ -33,7 +33,7 @@ block content
                 i.fa.fa-star
                 i.fa.fa-star-o
                 i.fa.fa-star-o
-              span.badge.badge-pill-badge-default.float-right 300m
+              span.badge.badge-pill-badge-default.badge-warning.float-right 300m
             p.address C/ Falsa, 123, Cullera
             .facilities
               span.badge.badge-warning Food
@@ -49,7 +49,7 @@ block content
                 i.fa.fa-star
                 i.fa.fa-star-o
                 i.fa.fa-star-o
-              span.badge.badge-pill-badge-default.float-right 300m
+              span.badge.badge-pill-badge-default.badge-warning.float-right 300m
             p.address C/ Falsa, 123, Cullera
             .facilities
               span.badge.badge-warning Food
