Add location-info page

--- a/views/locations-list.pug
+++ b/views/locations-list.pug
@@ -10,7 +10,7 @@ block content
       .card
         .card-block
           h4
-            a(href="/location") Juegame Store
+            a(href="/locations/123") Juegame Store
             small &nbsp;
               i.fa.fa-star
               i.fa.fa-star
@@ -26,7 +26,7 @@ block content
       .card
           .card-block
             h4
-              a(href="/location") Juegame Store
+              a(href="/locations/123") Juegame Store
               small &nbsp;
                 i.fa.fa-star
                 i.fa.fa-star
@@ -42,7 +42,7 @@ block content
       .card
           .card-block
             h4
-              a(href="/location") Juegame Store
+              a(href="/locations/123") Juegame Store
               small &nbsp;
                 i.fa.fa-star
                 i.fa.fa-star
