--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .row.banner
+    .col-12
+      h1= title
+  .row
+    .col-12
+      p Welcome to Where to Play
