--- a/views/location-info.pug
+++ b/views/location-info.pug
@@ -1,78 +1,55 @@
 extends layout
+include _includes/sharedHTMLfunctions
 
 block content
   .row.banner
     .col-12
-      h1 Juegame Store
+      h1= pageHeader.title
   .row
     .col-12.col-lg-9
       .row
         .col-12.col-md-6
           p.rating
-            i.fa.fa-star
-            i.fa.fa-star
-            i.fa.fa-star
-            i.fa.fa-star-o
-            i.fa.fa-star-o
-          p C/ Falsa, 123, Cullera
+            +outputRating(location.rating)
+          p= location.address
           .card.card-primary
             .card-block
               h2.card-title Opening hours
-              p.card-text Monday - Friday : 7:00am - 7:00pm
-              p.card-text Saturday : 8:00am - 5:00pm
-              p.card-text Sunday : closed
+              each time in location.openingTimes
+                p.card-text
+                  | #{time.days} :
+                  if time.closed
+                    | closed
+                  else
+                    | #{time.opening}
           .card.card-primary
             .card-block
               h2.card-title Facilities
-              span.badge.badge-warning
-                i.fa.fa-check
-                | &nbsp;Food
-              | &nbsp;
-              span.badge.badge-warning
-                i.fa.fa-check
-                | &nbsp;Store
-              | &nbsp;
-              span.badge.badge-warning
-                i.fa.fa-check
-                | &nbsp;Wi-Fi
-              | &nbsp;
+              each facility in location.facilities
+                span.badge.badge-warning
+                  i.fa.fa-check
+                  | &nbsp;#{facility}
+                | &nbsp;
         .col-12.col-md-6.location-map
           .card.card-primary
             .card-block
               h2.card-title Location map
-              img.img-fluid.rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2')
+              img.img-fluid.rounded(src=`http://maps.googleapis.com/maps/api/staticmap?center=${location.coords.lat},${location.coords.lng}&zoom=17&size=400x350&sensor=false&markers=${location.coords.lat},${location.coords.lng}&scale=2&key=AIzaSyCbe06aNVL-Iqd23svrZsn4mbGaftXHe7M`)
       .row
         .col-12
           .card.card-primary.review-card
             .card-block
               a.btn.btn-primary.float-right(href='/locations/review/new') Add review
               h2.card-title Customer reviews
-              .row.review
-                .col-12.no-gutters.review-header
-                  span.rating
-                    i.fa.fa-star
-                    i.fa.fa-star
-                    i.fa.fa-star
-                    i.fa.fa-star
-                    i.fa.fa-star-o
-                  span.reviewAuthor Simon Holmes
-                  small.reviewTimestamp 16 February 2017
-                .col-12
-                  p What a great place.
-              .row.review
-                .col-12.no-gutters.review-header
-                  span.rating
-                    i.fa.fa-star
-                    i.fa.fa-star
-                    i.fa.fa-star
-                    i.fa.fa-star-o
-                    i.fa.fa-star-o
-                  span.reviewAuthor Charlie Chaplin
-                  small.reviewTimestamp 14 February 2017
-                .col-12
-                  p It was okay. Not many games.
+              each review in location.reviews
+                .row.review
+                  .col-12.no-gutters.review-header
+                    span.rating
+                      +outputRating(review.rating)
+                    span.reviewAuthor &nbsp;#{review.author}
+                    small.reviewTimestamp &nbsp;#{review.timestamp}
+                  .col-12
+                    p !{(review.reviewText).replace(/\n/g, '<br/>')}
     .col-12.col-lg-3
-      p.lead
-        | Juegamestore is on Where to Play because you can meet here people interested in playing board games. Now it's your turn. 
-      p
-        | If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+      p.lead #{location.name} #{sidebar.context}
+      p= sidebar.callToAction
