Move data from view to controller in location-review-form page

--- a/views/location-review-form.pug
+++ b/views/location-review-form.pug
@@ -1,8 +1,9 @@
 extends layout
+
 block content
   .row.banner
     .col-12
-      h1 Review Juegamestore
+      h1= pageHeader.title
   .row
     .col-12.col-md-8
       form(action="/location", method="get", role="form")
