--- a/views/about.pug
+++ b/views/about.pug
@@ -6,4 +6,4 @@ block content
       h1= title
   row
     .col-12.col-lg-8
-      p Where to Play helps you to find the best places to enjoy your favourite hobby: Playing board games!
+      p !{(content).replace(/\n/g, '<br/>')}
